--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 
 # Full Postgres connection URL
-DB_URL=postgres://postgres:postgres@localhost:5432/db-name
+DB_URL=postgres://postgres:postgres@localhost:5432/database_name
 
 # App Configuration
 NODE_ENV=development
